--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm py-2 py-lg-3">
     <div class="container">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="main.html">
         <span class="brand-main">Smart</span> 
         <span class="brand-version"><strong>Control V.1.1 (MQTT)</strong></span>
       </a>
@@ -26,7 +26,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Dashboard</a>
+            <a class="nav-link active" aria-current="page" href="main.html">Dashboard</a>
           </li>
         </ul>
       </div>
